k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefixes@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: microservices.info
    http:
      paths:
      - path: /employee
        pathType: Prefix
        backend:
          service:
            name: employee
            port:
              number: 8080
      - path: /department
        pathType: Prefix
        backend:
          service:
            name: department
            port:
              number: 8080
      - path: /organization
        pathType: Prefix
        backend:
          service:
            name: organization
            port:
              number: 8080
  defaultBackend:
    service:
      name: default-http-backend
      port:
        number: 80
